--- a/index.html
+++ b/index.html
@@ -203,10 +203,14 @@
 
   <!-- FOOTER -->
   <footer>
-    © <span id="yr"></span> Ukwebtools • ProfitPilot  
-    <br>
-    <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a> · support@ukwebtools.com
-  </footer>
+  © <span id="yr"></span> Ukwebtools • ProfitPilot  
+  <br>
+  <span style="display:inline-block;margin-top:8px">
+    Independent tool • Estimates only • Not affiliated with any marketplace/platform • Not financial, legal, or tax advice.
+  </span>
+  <br>
+  <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a> · <a href="faq.html">FAQ</a> · support@ukwebtools.com
+</footer>
 
 </div>
 
