--- a/terms.html
+++ b/terms.html
@@ -3,93 +3,112 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Terms — Ukwebtools</title>
-  <meta name="description" content="Terms of use for Ukwebtools tools, including ProfitPilot.">
+  <title>Terms — ProfitPilot</title>
+  <meta name="description" content="Terms of use for ProfitPilot by Ukwebtools.">
   <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
   <style>
-    :root{--bg:#f7f9fc;--bg2:#eef3ff;--txt:#0b1220;--muted:#5b6474;--card:#fff;--line:rgba(16,24,40,.10);--accent:#0ea5a4;--shadow:0 12px 32px rgba(16,24,40,.08)}
+    :root{
+      --bg:#f7f9fc; --bg2:#eef3ff;
+      --txt:#0b1220; --muted:#5b6474;
+      --card:#fff; --line:rgba(16,24,40,.10);
+      --accent:#0ea5a4; --accent2:#4f46e5;
+      --shadow:0 14px 36px rgba(16,24,40,.08);
+      --shadow2:0 8px 22px rgba(16,24,40,.06);
+    }
     *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--txt);
-      background:radial-gradient(900px 500px at 20% 0%, rgba(14,165,164,.12), transparent 55%),
-              radial-gradient(900px 500px at 80% 0%, rgba(79,70,229,.10), transparent 55%),
-              linear-gradient(180deg,var(--bg2),var(--bg));}
-    a{color:var(--accent);text-decoration:none}
-    .wrap{max-width:900px;margin:0 auto;padding:28px 16px}
-    .top{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
-    .btn{padding:10px 14px;border-radius:999px;border:1px solid var(--line);background:#fff;box-shadow:0 6px 20px rgba(16,24,40,.06);font-weight:600}
-    .card{margin-top:16px;background:var(--card);border:1px solid var(--line);border-radius:18px;padding:22px;box-shadow:var(--shadow)}
-    h1{margin:0 0 8px;font-size:28px}
-    h2{margin:22px 0 8px;font-size:18px}
-    p,li{color:var(--muted);line-height:1.7}
+    body{
+      margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:var(--txt);
+      background:
+        radial-gradient(900px 520px at 16% 0%, rgba(14,165,164,.14), transparent 55%),
+        radial-gradient(900px 520px at 84% 0%, rgba(79,70,229,.12), transparent 55%),
+        linear-gradient(180deg,var(--bg2),var(--bg));
+    }
+    a{text-decoration:none;color:inherit}
+    .wrap{max-width:980px;margin:0 auto;padding:18px 16px 50px}
+    .nav{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;padding:10px 0}
+    .left,.right{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+    .btn{
+      padding:10px 14px;border-radius:999px;border:1px solid var(--line);
+      background:#fff;box-shadow:var(--shadow2);
+      font-weight:700;font-size:14px;display:inline-flex;gap:8px;align-items:center;
+    }
+    .btn.primary{border:none;color:#fff;background:linear-gradient(135deg,var(--accent),var(--accent2))}
+    .card{
+      margin-top:14px;background:rgba(255,255,255,.75);
+      border:1px solid var(--line);border-radius:22px;padding:20px;
+      box-shadow:var(--shadow);
+    }
+    h1{margin:0 0 8px;font-size:28px;letter-spacing:-.02em}
+    h2{margin:20px 0 8px;font-size:18px}
+    p,li{color:var(--muted);line-height:1.75}
     ul{margin:8px 0 0;padding-left:18px}
-    .small{font-size:12px;color:var(--muted)}
-    footer{margin-top:22px;text-align:center;color:var(--muted);font-size:12px}
+    footer{margin-top:18px;padding-top:14px;border-top:1px solid var(--line);text-align:center;color:var(--muted);font-size:12.5px;line-height:1.7}
+    .fine a{color:var(--accent);font-weight:800}
   </style>
 </head>
 <body>
   <div class="wrap">
-    <div class="top">
-      <div style="font-weight:900">Ukwebtools</div>
-      <div style="display:flex;gap:10px;flex-wrap:wrap">
+
+    <!-- CONSISTENT NAV -->
+    <div class="nav">
+      <div class="left">
+        <a class="btn" href="https://ukwebtools.com/">← Ukwebtools</a>
         <a class="btn" href="index.html">Home</a>
         <a class="btn" href="privacy.html">Privacy</a>
-        <a class="btn" href="faq.html">FAQ</a>
+        <a class="btn" href="terms.html">Terms</a>
+      </div>
+      <div class="right">
+        <a class="btn primary" href="login.html">Log in</a>
       </div>
     </div>
 
     <div class="card">
       <h1>Terms of Use</h1>
-      <div class="small">Last updated: <span id="d"></span></div>
+      <p style="margin:0 0 12px"><span style="font-size:12px;color:var(--muted)">Last updated: <span id="d"></span></span></p>
 
-      <h2>1) Estimates only (no advice)</h2>
+      <h2>1) Estimates only</h2>
       <p>
-        Ukwebtools tools (including ProfitPilot) provide <b>estimates</b> based on your inputs. They do not provide
-        financial, legal, tax, or investment advice. You are responsible for how you use outputs and decisions you make.
+        ProfitPilot provides estimates based on your inputs. Results are not guaranteed and are not financial, legal, or tax advice.
+        You are responsible for decisions you make using the tool.
       </p>
 
       <h2>2) No affiliation</h2>
       <p>
-        Ukwebtools is an independent service. We are not affiliated with, endorsed by, or sponsored by any marketplace,
-        platform, or payment provider.
+        ProfitPilot is an independent tool by Ukwebtools. We are not affiliated with or endorsed by any marketplace, platform, or payment provider.
       </p>
 
       <h2>3) Accounts and access</h2>
       <ul>
         <li>You are responsible for keeping your login secure.</li>
-        <li>Trial limits may apply and can change as we improve the product.</li>
-        <li>PRO access is a one-time unlock (as described on the sales page).</li>
+        <li>Trial limits and feature limits may apply and may change as the product improves.</li>
+        <li>PRO access is a one-time unlock as described on the sales page.</li>
       </ul>
 
       <h2>4) Purchases</h2>
       <p>
-        Payments are processed by Gumroad. Refund handling, receipts, and checkout security are governed by Gumroad’s
-        policies and your local consumer rights.
+        Payments are processed by Gumroad. Receipts, checkout security, and purchase policies follow Gumroad’s systems and applicable consumer rights.
       </p>
 
       <h2>5) Reviews</h2>
       <p>
-        Reviews you submit may appear publicly. Don’t post personal/sensitive information. We may remove spam, abuse,
-        or illegal content.
+        Reviews you submit may appear publicly. Do not include sensitive personal information. We may remove illegal content, spam, or abuse.
       </p>
 
       <h2>6) Acceptable use</h2>
       <ul>
-        <li>No attempts to bypass trial or PRO limits.</li>
-        <li>No abuse, scraping, or attacks against our infrastructure.</li>
+        <li>No attempts to bypass access controls or limits.</li>
+        <li>No attacks, scraping, or abuse of infrastructure.</li>
         <li>No illegal use.</li>
       </ul>
 
-      <h2>7) Liability</h2>
-      <p>
-        To the maximum extent permitted by law, Ukwebtools is not liable for losses, damages, or outcomes arising from
-        use of the tools. You use the tools at your own risk.
-      </p>
+      <h2>7) Support</h2>
+      <p>Email: <a href="mailto:support@ukwebtools.com" style="color:var(--accent);font-weight:800">support@ukwebtools.com</a></p>
 
-      <h2>8) Contact</h2>
-      <p>Email: <a href="mailto:support@ukwebtools.com">support@ukwebtools.com</a></p>
+      <footer class="fine">
+        <div>© <span id="yr"></span> Ukwebtools • ProfitPilot</div>
+        <div><a href="privacy.html">Privacy</a> · <a href="https://profitpilot.ukwebtools.com/reviews.html">Reviews</a></div>
+      </footer>
     </div>
-
-    <footer>© <span id="yr"></span> Ukwebtools</footer>
   </div>
 
   <script>
