--- a/app.html
+++ b/app.html
@@ -128,22 +128,51 @@
 </head>
 <body>
 <div class="wrap">
+ <!-- APP: SINGLE PREMIUM NAV (REPLACES OLD NAV) -->
+<div style="max-width:1200px;margin:0 auto;padding:14px 16px;position:relative;z-index:50">
+  <div style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
 
-  <div class="nav">
-    <div class="brand">
-      <div class="logo">PP</div>
-      <div>
-        <div style="font-weight:900">ProfitPilot</div>
-        <div class="pill">Estimates only • Independent tool</div>
-      </div>
-    </div>
+    <!-- LEFT -->
     <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center">
+      <a class="btn ghost" href="https://ukwebtools.com/">← Ukwebtools</a>
       <a class="btn ghost" href="index.html">Home</a>
       <a class="btn ghost" href="reviews.html">Reviews</a>
-      <span class="pill" id="accessPill">Loading…</span>
+      <a class="btn ghost" href="privacy.html">Privacy</a>
+      <a class="btn ghost" href="terms.html">Terms</a>
+    </div>
+
+    <!-- RIGHT (KEEP THESE IDS FOR APP LOGIC) -->
+    <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center">
+      <span class="pill" id="accessPill">Checking access…</span>
       <button class="btn" id="logoutBtn">Log out</button>
     </div>
   </div>
+
+  <!-- Breadcrumbs (visible) -->
+  <div style="margin-top:10px;font-size:12.5px;color:var(--muted);display:flex;gap:6px;flex-wrap:wrap;align-items:center">
+    <a href="https://ukwebtools.com/" style="color:var(--accent);text-decoration:none;font-weight:800">Ukwebtools</a>
+    <span style="opacity:.55">›</span>
+    <a href="index.html" style="color:var(--accent);text-decoration:none;font-weight:800">ProfitPilot</a>
+    <span style="opacity:.55">›</span>
+    <span>App</span>
+  </div>
+
+  <!-- Breadcrumbs (SEO JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Ukwebtools","item":"https://ukwebtools.com/"},
+      {"@type":"ListItem","position":2,"name":"ProfitPilot","item":"https://profitpilot.ukwebtools.com/index.html"},
+      {"@type":"ListItem","position":3,"name":"App","item":"https://profitpilot.ukwebtools.com/app.html"}
+    ]
+  }
+  </script>
+</div>
+<!-- END APP NAV -->
+
+</div>
 
   <div class="banner" id="importBanner">Imported shared calculation ✅</div>
 
