--- a/share.html
+++ b/share.html
@@ -1,88 +1,187 @@
-<!-- UNIVERSAL NAVIGATION -->
-<div style="
-  max-width:1200px;
-  margin:0 auto;
-  padding:14px 16px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  gap:12px;
-  flex-wrap:wrap;
-">
+<!-- PROFITPILOT: UNIVERSAL NAV + BREADCRUMBS (includes Pricing) -->
+<style>
+  .pp-navwrap{max-width:1200px;margin:0 auto;padding:14px 16px;position:relative;z-index:60}
+  .pp-nav{
+    display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;
+    background:rgba(255,255,255,.72);border:1px solid rgba(16,24,40,.10);
+    border-radius:18px;padding:12px 12px;backdrop-filter:blur(10px);
+    box-shadow:0 10px 30px rgba(16,24,40,.08);
+  }
+  .pp-left,.pp-right{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+  .pp-btn{
+    padding:10px 14px;border-radius:999px;border:1px solid rgba(16,24,40,.10);
+    background:rgba(255,255,255,.90);font-weight:900;text-decoration:none;color:#0b1220;
+    box-shadow:0 8px 18px rgba(16,24,40,.06);
+    display:inline-flex;gap:8px;align-items:center;white-space:nowrap;
+  }
+  .pp-btn:hover{transform:translateY(-1px)}
+  .pp-btn:active{transform:translateY(0)}
+  .pp-primary{
+    border:none;color:#fff;
+    background:linear-gradient(135deg,#0ea5a4,#4f46e5);
+    box-shadow:0 14px 28px rgba(79,70,229,.16);
+  }
+  .pp-active{
+    border-color:rgba(14,165,164,.35);
+    background:rgba(14,165,164,.10);
+  }
+  .pp-user{
+    padding:10px 14px;border-radius:999px;border:1px solid rgba(16,24,40,.10);
+    background:rgba(255,255,255,.70);
+    color:rgba(16,24,40,.72);
+    font-weight:900;
+    display:none;
+    max-width:320px;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+  }
+  .pp-crumbs{
+    margin-top:10px;
+    font-size:12.5px;
+    color:rgba(16,24,40,.62);
+    display:flex;gap:6px;flex-wrap:wrap;align-items:center;
+  }
+  .pp-crumbs a{color:rgba(14,165,164,.95);font-weight:900;text-decoration:none}
+  .pp-sep{opacity:.55}
+</style>
 
-  <!-- LEFT SIDE -->
-  <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center">
-    <a href="https://ukwebtools.com/"
-       style="
-        padding:10px 14px;
-        border-radius:999px;
-        border:1px solid rgba(16,24,40,.10);
-        background:#fff;
-        font-weight:700;
-        text-decoration:none;
-        color:#0b1220;
-       ">
-      ← Ukwebtools
-    </a>
+<div class="pp-navwrap" role="navigation" aria-label="Primary">
+  <div class="pp-nav">
+    <!-- LEFT -->
+    <div class="pp-left">
+      <a class="pp-btn" href="https://ukwebtools.com/" data-nav="ukwebtools">← Ukwebtools</a>
+      <a class="pp-btn" href="index.html" data-nav="home">Home</a>
+      <a class="pp-btn" href="app.html" data-nav="app">App</a>
+      <a class="pp-btn" href="pricing.html" data-nav="pricing">Pricing</a>
+      <a class="pp-btn" href="reviews.html" data-nav="reviews">Reviews</a>
+      <a class="pp-btn" href="help.html" data-nav="help">How to use</a>
+      <a class="pp-btn" href="privacy.html" data-nav="privacy">Privacy</a>
+      <a class="pp-btn" href="terms.html" data-nav="terms">Terms</a>
+    </div>
 
-    <a href="index.html"
-       style="
-        padding:10px 14px;
-        border-radius:999px;
-        border:1px solid rgba(16,24,40,.10);
-        background:#fff;
-        font-weight:700;
-        text-decoration:none;
-        color:#0b1220;
-       ">
-      Home
-    </a>
-
-    <a href="privacy.html"
-       style="
-        padding:10px 14px;
-        border-radius:999px;
-        border:1px solid rgba(16,24,40,.10);
-        background:#fff;
-        font-weight:700;
-        text-decoration:none;
-        color:#0b1220;
-       ">
-      Privacy
-    </a>
-
-    <a href="terms.html"
-       style="
-        padding:10px 14px;
-        border-radius:999px;
-        border:1px solid rgba(16,24,40,.10);
-        background:#fff;
-        font-weight:700;
-        text-decoration:none;
-        color:#0b1220;
-       ">
-      Terms
-    </a>
+    <!-- RIGHT -->
+    <div class="pp-right">
+      <span class="pp-user" id="ppUserChip">—</span>
+      <a class="pp-btn pp-primary" id="ppAuthBtn" href="login.html">Log in</a>
+      <a class="pp-btn" id="ppLogoutBtn" href="#" style="display:none">Log out</a>
+    </div>
   </div>
 
-  <!-- RIGHT SIDE -->
-  <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center">
-    <a href="login.html"
-       style="
-        padding:10px 16px;
-        border-radius:999px;
-        border:none;
-        background:linear-gradient(135deg,#0ea5a4,#4f46e5);
-        color:#fff;
-        font-weight:800;
-        text-decoration:none;
-       ">
-      Log in
-    </a>
+  <!-- Visible Breadcrumbs -->
+  <div class="pp-crumbs" aria-label="Breadcrumb">
+    <a href="https://ukwebtools.com/">Ukwebtools</a>
+    <span class="pp-sep">›</span>
+    <a href="index.html">ProfitPilot</a>
+    <span class="pp-sep">›</span>
+    <span id="ppCrumbCurrent">Page</span>
   </div>
 
+  <!-- JSON-LD Breadcrumbs for SEO -->
+  <script id="ppBreadcrumbJson" type="application/ld+json"></script>
 </div>
-<!-- END NAV -->
+
+<script type="module">
+  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
+
+  // ✅ YOUR REAL VALUES (already safe for frontend)
+  const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
+  const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
+
+  const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
+
+  // ---------- Active page highlighting ----------
+  const path = (location.pathname.split("/").pop() || "index.html").toLowerCase();
+  const map = {
+    "index.html":"home",
+    "app.html":"app",
+    "pricing.html":"pricing",
+    "reviews.html":"reviews",
+    "help.html":"help",
+    "privacy.html":"privacy",
+    "terms.html":"terms",
+    "login.html":"login",
+    "reset.html":"reset",
+    "verify.html":"verify"
+  };
+  const activeKey = map[path] || "home";
+
+  document.querySelectorAll(".pp-btn[data-nav]").forEach(a=>{
+    const key = a.getAttribute("data-nav");
+    if (key === activeKey) a.classList.add("pp-active");
+  });
+
+  // ---------- Breadcrumb text + JSON-LD ----------
+  const titles = {
+    home:"Home",
+    app:"App",
+    pricing:"Pricing",
+    reviews:"Reviews",
+    help:"How to use",
+    privacy:"Privacy",
+    terms:"Terms",
+    login:"Log in",
+    reset:"Reset password",
+    verify:"Verify email"
+  };
+  const currentTitle = titles[activeKey] || "Page";
+  const crumbEl = document.getElementById("ppCrumbCurrent");
+  if (crumbEl) crumbEl.textContent = currentTitle;
+
+  const base = "https://profitpilot.ukwebtools.com/";
+  const crumbItems = [
+    { name:"Ukwebtools", item:"https://ukwebtools.com/" },
+    { name:"ProfitPilot", item: base + "index.html" },
+    { name: currentTitle, item: base + path }
+  ];
+
+  const jsonEl = document.getElementById("ppBreadcrumbJson");
+  if (jsonEl){
+    jsonEl.textContent = JSON.stringify({
+      "@context":"https://schema.org",
+      "@type":"BreadcrumbList",
+      "itemListElement": crumbItems.map((c,i)=>({
+        "@type":"ListItem",
+        "position": i+1,
+        "name": c.name,
+        "item": c.item
+      }))
+    });
+  }
+
+  // ---------- Auth state: show email + logout ----------
+  const userChip = document.getElementById("ppUserChip");
+  const authBtn = document.getElementById("ppAuthBtn");
+  const logoutBtn = document.getElementById("ppLogoutBtn");
+
+  async function refreshAuthUI(){
+    const { data: { session } } = await supabase.auth.getSession();
+
+    if (session?.user?.email){
+      userChip.style.display = "inline-flex";
+      userChip.textContent = session.user.email;
+      authBtn.style.display = "none";
+      logoutBtn.style.display = "inline-flex";
+    } else {
+      userChip.style.display = "none";
+      authBtn.style.display = "inline-flex";
+      logoutBtn.style.display = "none";
+      authBtn.textContent = "Log in";
+      authBtn.setAttribute("href","login.html");
+    }
+  }
+
+  logoutBtn?.addEventListener("click", async (e)=>{
+    e.preventDefault();
+    await supabase.auth.signOut();
+    location.href = "login.html";
+  });
+
+  await refreshAuthUI();
+  supabase.auth.onAuthStateChange(()=>refreshAuthUI());
+</script>
+<!-- END PROFITPILOT NAV -->
+
 <!doctype html>
 <html lang="en">
 <head>
